# VelesResearch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  NEWS.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
figs/: Veles-logo.ai  Veles-rune.ai
tests/: test_json_file.py  test_options.py  test_structure.py  test_tea.py  test_tools.py  test_utils.py
velesresearch/: __init__.py  generator.py  helperModels.py  models.py  options.py  questiontypes.py  structure.py  tools.py  utils.py  validators.py  wrappers.py
velesresearch/sample/: script.py
velesresearch/website_template/: bun.lockb  package.json  recaptchaSecret.json  webpack.config.js
velesresearch/website_template/public/: index.html
velesresearch/website_template/src/: SurveyComponent.jsx  index.js
