[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "velesresearch"
version = "0.0.0"
description = "Veles is a free and open source python survey tool for researchers."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{name = "Jakub Jędrusiak", email = "kuba23031999@gmail.com"}]
requires-python = "^3.11"
dependencies = [
    "pydantic>=2.0.0",
    "markdown>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.2",
    "pytest>=7.3.2",
    "coverage>=7.2.7",
    "pylint-pydantic>=0.3.2",
    "ipykernel>=6.23.2",
]

[project.urls]
Repository = "https://github.com/jakub-jedrusiak/VelesResearch"
Documentation = "https://docs.velesweb.org/"

[tool.poetry]
packages = [{include = "velesresearch"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
markdown = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.3.2"
coverage = "^7.2.7"
pylint-pydantic = "^0.3.2"
ipykernel = "^6.23.2"

[tool.pylint]
load-plugins = "pylint_pydantic"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
